--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "type": "image/png"
     },
     {
-      "src": "icon.png",
+      "src": "icon-removebg-preview.png",
       "sizes": "512x512",
       "type": "image/png"
     }
